# gnome-spaceduel

./: Makefile.am  README  configure.ac  meson.build
data/: Makefile.am  assistant.ui  gnome-spaceduel.desktop.in  gspaceduel.desktop.in  mainwindow.ui  org.gnome.gspaceduel.gschema.xml  org.gnome.spaceduel.gschema.xml  preferences.ui  style.css
data/icons/hicolor/: Makefile.am
data/sprites/: Makefile.am
data/sprites/explosion/: Makefile.am
help/: Makefile.am
help/C/: index.page
po/: POTFILES.in
src/: Makefile.am  application.vala  config.vapi  game.vala  gnome-spaceduel.gresource.xml  gspaceduel.gresource.xml  meson.build  sprites.vala
