icon16dir=$(datadir)/icons/hicolor/16x16/apps
icon22dir=$(datadir)/icons/hicolor/22x22/apps
icon32dir=$(datadir)/icons/hicolor/32x32/apps
icon48dir=$(datadir)/icons/hicolor/48x48/apps

icon16_DATA = 16x16/gspaceduel.png
icon22_DATA = 22x22/gspaceduel.png
icon32_DATA = 32x32/gspaceduel.png
icon48_DATA = 48x48/gspaceduel.png

EXTRA_DIST = $(icon16_DATA) $(icon22_DATA) $(icon32_DATA) $(icon48_DATA)

-include $(top_srcdir)/git.mk
