explosdir = $(datadir)/gspaceduel/sprites/explosion
explos_DATA = \
	 explos00.png \
	 explos01.png \
	 explos02.png \
	 explos03.png \
	 explos04.png \
	 explos05.png \
	 explos06.png \
	 explos07.png \
	 explos08.png \
	 explos09.png \
	 explos10.png \
	 explos11.png \
	 explos12.png \
	 explos13.png \
	 explos14.png \
	 explos15.png \
	 explos16.png \
	 explos17.png \
	 explos18.png \
	 explos19.png \
	 explos20.png \
	 explos21.png \
	 explos22.png \
	 explos23.png \
	 explos24.png \
	 explos25.png \
	 explos26.png \
	 explos27.png \
	 explos28.png \
	 explos29.png \
	 explos30.png

EXTRA_DIST = \
	 $(explos_DATA)

-include $(top_srcdir)/git.mk
